force-app/main/default/objects/Work_Order__c/fields/GP_Percent__c.field-meta.xml
<CustomField>
    <fullName>GP_Percent__c</fullName>
    <description>Gross profit percent. Work Order tier spec Section 7.4. The * 100 matches the org Percent-field convention (store 38 to show 38%).</description>
    <formula>IF( Total_Revenue__c = 0, 0, ( Total_Revenue__c - Total_Cost__c ) / Total_Revenue__c * 100 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GP Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>