force-app/main/default/objects/Work_Order__c/fields/Health_Check_FM_Notes__c.field-meta.xml
<CustomField>
    <fullName>Health_Check_FM_Notes__c</fullName>
    <label>Health Check FM Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>