force-app/main/default/objects/Work_Order__c/fields/Health_Check_Status__c.field-meta.xml
<CustomField>
    <fullName>Health_Check_Status__c</fullName>
    <label>Health Check Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Prompted</fullName>
                <default>true</default>
                <label>Not Prompted</label>
            </value>
            <value>
                <fullName>Awaiting Response</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>