force-app/main/default/objects/Work_Order__c/fields/Is_Finished_Job__c.field-meta.xml
<CustomField>
    <fullName>Is_Finished_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Finished Job</label>
    <type>Checkbox</type>
</CustomField>