force-app/main/default/objects/Work_Order__c/fields/Is_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Is_Warranty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Warranty</label>
    <type>Checkbox</type>
</CustomField>