force-app/main/default/objects/Work_Order__c/fields/Job_Health__c.field-meta.xml
<CustomField>
    <fullName>Job_Health__c</fullName>
    <label>Job Health</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>