force-app/main/default/objects/Work_Order__c/fields/Lennar_Cloudscape_Entry_Complete__c.field-meta.xml
<CustomField>
    <fullName>Lennar_Cloudscape_Entry_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lennar Cloudscape Entry Complete</label>
    <type>Checkbox</type>
</CustomField>