force-app/main/default/objects/Work_Order__c/fields/Loading_Check_Completed__c.field-meta.xml
<CustomField>
    <fullName>Loading_Check_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stage 9. Crew loading ticket verified before leaving shop. Required before Begin Drive.</description>
    <label>Loading Check Completed</label>
    <type>Checkbox</type>
</CustomField>