force-app/main/default/objects/Work_Order__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lot</label>
    <referenceTo>Lot__c</referenceTo>
    <relationshipLabel>Work Orders (Lot)</relationshipLabel>
    <relationshipName>Work_Orders_Lot</relationshipName>
    <type>Lookup</type>
</CustomField>