force-app/main/default/objects/Work_Order__c/fields/Lot_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Lot_Longitude__c</fullName>
    <label>Lot Longitude</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>