force-app/main/default/objects/Work_Order__c/fields/MPO_Flag__c.field-meta.xml
<CustomField>
    <fullName>MPO_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Multi-Plan Order indicator</description>
    <label>MPO Flag</label>
    <type>Checkbox</type>
</CustomField>