force-app/main/default/objects/Work_Order__c/fields/Mulch_CY__c.field-meta.xml
<CustomField>
    <fullName>Mulch_CY__c</fullName>
    <description>Cubic yards of mulch in scope for this Work Order</description>
    <label>Mulch CY</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>