force-app/main/default/objects/Work_Order__c/fields/Needs_Duration_Review__c.field-meta.xml
<CustomField>
    <fullName>Needs_Duration_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true by WLRDurationCalculationService when any line item has Missing Standard or Missing Quantity status, or when Calculated_Duration_Minutes__c is zero. Prevents this Work Order from entering FSL optimization without human review.</description>
    <label>Needs Duration Review</label>
    <type>Checkbox</type>
</CustomField>