force-app/main/default/objects/Work_Order__c/fields/NFI_Count__c.field-meta.xml
<CustomField>
    <fullName>NFI_Count__c</fullName>
    <label>NFI Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>