force-app/main/default/objects/Work_Order__c/fields/NFI_Escalated_To_COO__c.field-meta.xml
<CustomField>
    <fullName>NFI_Escalated_To_COO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set true when count &gt; 2</description>
    <label>NFI Escalated To COO</label>
    <type>Checkbox</type>
</CustomField>