force-app/main/default/objects/Work_Order__c/fields/NFI_Last_Notes__c.field-meta.xml
<CustomField>
    <fullName>NFI_Last_Notes__c</fullName>
    <label>NFI Last Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>