force-app/main/default/objects/Work_Order__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Orders (Parent Account)</relationshipLabel>
    <relationshipName>Work_Orders_Parent</relationshipName>
    <type>Lookup</type>
</CustomField>