force-app/main/default/objects/Work_Order__c/fields/Pipeline_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Bucket__c</fullName>
    <label>Pipeline Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>90+ Days</fullName>
                <default>true</default>
                <label>90+ Days</label>
            </value>
            <value>
                <fullName>60+ Days</fullName>
            </value>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>Clear to Schedule</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Ready to Schedule</fullName>
            </value>
            <value>
                <fullName>Takeoff In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>