force-app/main/default/objects/Work_Order__c/fields/PO_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Release_Date__c</fullName>
    <label>PO Release Date</label>
    <type>Date</type>
</CustomField>