force-app/main/default/objects/Work_Order__c/fields/PO_Source__c.field-meta.xml
<CustomField>
    <fullName>PO_Source__c</fullName>
    <label>PO Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SupplyPro</fullName>
                <default>true</default>
                <label>SupplyPro</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Builder Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>