force-app/main/default/objects/Work_Order__c/fields/Proposed_Crew__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stage 7 (Scheduling). Crew AutoScheduleService proposed for this WO. Promoted to Crew when manager approves the proposal.</description>
    <label>Proposed Crew</label>
    <referenceTo>Crew__c</referenceTo>
    <relationshipLabel>Proposed Work Orders</relationshipLabel>
    <relationshipName>Proposed_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>