force-app/main/default/objects/Work_Order__c/fields/Proposed_Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Schedule_Date__c</fullName>
    <description>Stage 7 (Scheduling). Date AutoScheduleService proposed for this WO during the daily 2:30pm ET batch. Promoted to Scheduled_Date when manager sets Schedule_Proposal_Status to Manager Approved.</description>
    <label>Proposed Schedule Date</label>
    <type>Date</type>
</CustomField>