force-app/main/default/objects/Work_Order__c/fields/QI_Complete__c.field-meta.xml
<CustomField>
    <fullName>QI_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QI Complete</label>
    <type>Checkbox</type>
</CustomField>