force-app/main/default/objects/Work_Order__c/fields/QI_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>QI_Completed_Date__c</fullName>
    <label>QI Completed Date</label>
    <type>Date</type>
</CustomField>