force-app/main/default/objects/Work_Order__c/fields/QI_Held__c.field-meta.xml
<CustomField>
    <fullName>QI_Held__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QI Held</label>
    <type>Checkbox</type>
</CustomField>