force-app/main/default/objects/Work_Order__c/fields/QI_Outcome__c.field-meta.xml
<CustomField>
    <fullName>QI_Outcome__c</fullName>
    <description>Quality Inspection result. Pass advances to Ready to Invoice; Fail holds the close and spawns Customer Care. Work Order tier spec Section 6 (G-QI: pass/fail model).</description>
    <label>QI Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>