force-app/main/default/objects/Work_Order__c/fields/Repair_Scope__c.field-meta.xml
<CustomField>
    <fullName>Repair_Scope__c</fullName>
    <label>Repair Scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>