force-app/main/default/objects/Work_Order__c/fields/Request_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Received_Date__c</fullName>
    <label>Request Received Date</label>
    <type>DateTime</type>
</CustomField>