force-app/main/default/objects/Work_Order__c/fields/Requested_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Install_Date__c</fullName>
    <label>Target Start Date</label>
    <type>Date</type>
</CustomField>