force-app/main/default/objects/Work_Order__c/fields/Revenue_Division__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Division__c</fullName>
    <label>Revenue Division</label>
    <length>80</length>
    <type>Text</type>
</CustomField>