force-app/main/default/objects/Work_Order__c/fields/Route_Distance_Miles__c.field-meta.xml
<CustomField>
    <fullName>Route_Distance_Miles__c</fullName>
    <description>Stage 7 (Scheduling). Drive distance from previous stop on the proposed route. Set by AutoScheduleService for routing optimization and crew load planning.</description>
    <label>Route Distance (Miles)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>