force-app/main/default/objects/Work_Order__c/fields/Route_Stop_Number__c.field-meta.xml
<CustomField>
    <fullName>Route_Stop_Number__c</fullName>
    <description>Stage 7 (Scheduling). Sequential stop position on the proposed daily route for the assigned crew. 1 = first stop. Set by AutoScheduleService.</description>
    <label>Route Stop Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>