force-app/main/default/objects/Work_Order__c/fields/Schedule_Day__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Day__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule Day</label>
    <referenceTo>Schedule_Day__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>