force-app/main/default/objects/Work_Order__c/fields/Schedule_Issue_Count__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Issue_Count__c</fullName>
    <label>Schedule Issue Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>