force-app/main/default/objects/Work_Order__c/fields/Schedule_Proposal_Created_At__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Proposal_Created_At__c</fullName>
    <description>Stage 7 (Scheduling). Timestamp when AutoScheduleService wrote the proposal. Used to drive the 3:00pm ET Manager Review Task due time. Cleared when proposal is promoted or rejected.</description>
    <label>Schedule Proposal Created At</label>
    <type>DateTime</type>
</CustomField>