force-app/main/default/objects/Work_Order__c/fields/Schedule_Proposal_Status__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Proposal_Status__c</fullName>
    <description>Stage 7 (Scheduling). Workflow state of the AutoScheduleService proposal. Pending Review = waiting on Scheduling Manager. Manager Approved = auto-promotes to Scheduled_Date + Crew + Schedule_Locked + fires SchedulingService.onScheduleLocked. Manager Rejected = needs manual reschedule. Manual Override = scheduler bypassed the proposal.</description>
    <label>Schedule Proposal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Review</fullName>
                <default>true</default>
                <label>Pending Review</label>
            </value>
            <value>
                <fullName>Manager Approved</fullName>
            </value>
            <value>
                <fullName>Manager Rejected</fullName>
            </value>
            <value>
                <fullName>Manual Override</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>