force-app/main/default/objects/Work_Order__c/fields/Scheduled_End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_End_DateTime__c</fullName>
    <label>Scheduled End</label>
    <type>DateTime</type>
</CustomField>