force-app/main/default/objects/Work_Order__c/fields/Scheduled_Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Start_DateTime__c</fullName>
    <label>Scheduled Start</label>
    <type>DateTime</type>
</CustomField>