force-app/main/default/objects/Work_Order__c/fields/Scheduled_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Start_Time__c</fullName>
    <description>Time of day the crew is scheduled to start this work order.</description>
    <label>Scheduled Start Time</label>
    <type>Time</type>
</CustomField>