force-app/main/default/objects/Work_Order__c/fields/Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Line__c</fullName>
    <description>The service this sub-work-order covers. Set on child sub-WOs. Work Order tier spec Section 6.</description>
    <label>Service Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Landscape Install</fullName>
            </value>
            <value>
                <fullName>Irrigation</fullName>
            </value>
            <value>
                <fullName>Grading</fullName>
            </value>
            <value>
                <fullName>Aqua</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>