force-app/main/default/objects/Work_Order__c/fields/Severe_Weather_Hold__c.field-meta.xml
<CustomField>
    <fullName>Severe_Weather_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Severe Weather Hold</label>
    <type>Checkbox</type>
</CustomField>