force-app/main/default/objects/Work_Order__c/fields/Severe_Weather_Hold_At__c.field-meta.xml
<CustomField>
    <fullName>Severe_Weather_Hold_At__c</fullName>
    <label>Severe Weather Hold At</label>
    <type>DateTime</type>
</CustomField>