force-app/main/default/objects/Work_Order__c/fields/Severe_Weather_Hold_By__c.field-meta.xml
<CustomField>
    <fullName>Severe_Weather_Hold_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Severe Weather Hold By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Work Orders Held by Weather</relationshipLabel>
    <relationshipName>Work_Orders_Held_By_Weather</relationshipName>
    <type>Lookup</type>
</CustomField>