force-app/main/default/objects/Work_Order__c/fields/Severe_Weather_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Severe_Weather_Hold_Reason__c</fullName>
    <label>Severe Weather Hold Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>