force-app/main/default/objects/Work_Order__c/fields/Shrub_Count__c.field-meta.xml
<CustomField>
    <fullName>Shrub_Count__c</fullName>
    <description>Number of shrubs planned for this work order. From takeoff or community package.</description>
    <label>Shrub Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>