force-app/main/default/objects/Work_Order__c/fields/Site_Not_Ready_Reason__c.field-meta.xml
<CustomField>
    <fullName>Site_Not_Ready_Reason__c</fullName>
    <label>Site Not Ready Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>