force-app/main/default/objects/Work_Order__c/fields/Site_Readiness_Check_Due__c.field-meta.xml
<CustomField>
    <fullName>Site_Readiness_Check_Due__c</fullName>
    <label>Site Readiness Check Due</label>
    <type>DateTime</type>
</CustomField>