force-app/main/default/objects/Work_Order__c/fields/Site_Readiness_Reason__c.field-meta.xml
<CustomField>
    <fullName>Site_Readiness_Reason__c</fullName>
    <label>Site Readiness Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grading Incomplete</fullName>
            </value>
            <value>
                <fullName>Utilities Not Marked</fullName>
            </value>
            <value>
                <fullName>Active Construction Conflict</fullName>
            </value>
            <value>
                <fullName>Access Blocked</fullName>
            </value>
            <value>
                <fullName>Weather / Standing Water</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>