force-app/main/default/objects/Work_Order__c/fields/Site_Readiness_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Readiness_Status__c</fullName>
    <label>Site Readiness Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Not Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>