force-app/main/default/objects/Work_Order__c/fields/Sod_Species__c.field-meta.xml
<CustomField>
    <fullName>Sod_Species__c</fullName>
    <label>Sod Species</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bermuda</fullName>
                <default>true</default>
                <label>Bermuda</label>
            </value>
            <value>
                <fullName>Fescue</fullName>
            </value>
            <value>
                <fullName>Zoysia</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>